# tts

./: .gitignore  .travis.yml  BUILD.bazel  README.md  WORKSPACE  run.sh
.ijwb/: .bazelproject
.project/: .bazelproject
java/com/jermowery/audio/: BUILD  ConvertToAudio.java  CovertToAudioMain.java  FromTextSsmlProvider.java  SsmlProvider.java
java/com/jermowery/audio/args/: Annotations.java  Args.java  ArgsModule.java  BUILD
java/com/jermowery/audio/cli/: BUILD.bazel  ConvertToAudio.java  CovertToAudioMain.java
java/com/jermowery/audio/cli/args/: Annotations.java  Args.java  ArgsModule.java  BUILD.bazel
java/com/jermowery/audio/lib/: BUILD.bazel  FromSsmlSsmlProvider.java  FromTextSsmlProvider.java  SsmlProvider.java
java/com/jermowery/audio/server/: ApiServer.java  ApiServlet.java  BUILD.bazel  ChunkedOutputStream.java  ConvertRequest.java  UiServlet.java
java/com/jermowery/audio/server2/: ApiController.java  ApiServer.java  BUILD.bazel  ConvertRequest.java
javatests/com/jermowery/audio/: BUILD  FromTextSsmlProviderTest.java  test1.txt
javatests/com/jermowery/audio/args/: ArgsModuleTest.java  BUILD
javatests/com/jermowery/audio/cli/args/: ArgsModuleTest.java  BUILD
javatests/com/jermowery/audio/lib/: BUILD.bazel  FromTextSsmlProviderTest.java  test2.txt
resources/: 3rdpartylicenses.txt  index.html  main.5a274127df14b2eb.js  main.5c47bace89b14cfe.js  main.b0d2a26e355280f5.js  polyfills.64215a2b63eff7bb.js  runtime.46afa24354326505.js  styles.623ece5758233bdd.css
ui/tts/: BUILD.bazel  README.md  angular.json  package-lock.json  package.json  tsconfig.json
ui/tts/src/: index.html  styles.scss
ui/tts/src/app/: app.component.html  app.component.scss  app.component.ts  app.module.ts  test.xml
ui/tts/src/environments/: environment.ts
