java_library(
    name = "audio",
    srcs = glob(["*.java"]),
    deps = [
        "//java/com/jermowery/audio/cli/args",
        "//java/com/jermowery/audio/lib",
        "@maven//:com_beust_jcommander",
        "@maven//:com_google_api_api_common",
        "@maven//:com_google_api_grpc_proto_google_cloud_texttospeech_v1",
        "@maven//:com_google_cloud_google_cloud_texttospeech",
        "@maven//:com_google_guava_guava",
        "@maven//:com_google_inject_guice",
        "@maven//:com_google_protobuf_protobuf_java",
    ],
)

java_binary(
    name = "CovertToAudioMain",
    runtime_deps = [":audio"],
)
