java_plugin(
    name = "autovalue-plugin",
    generates_api = 1,
    processor_class = "com.google.auto.value.processor.AutoValueProcessor",
    deps = ["@maven//:com_google_auto_value_auto_value"],
)

java_library(
    name = "autovalue-processor",
    exported_plugins = [":autovalue-plugin"],
    exports = ["@maven//:com_google_auto_value_auto_value"],
)

java_library(
    name = "server",
    srcs = glob(["*.java"]),
    resources = ["test.mp3"],
    deps = [
        ":autovalue-processor",
        "@maven//:com_google_auto_value_auto_value_annotations",
        "@maven//:com_google_code_gson_gson",
        "@maven//:com_google_guava_guava",
    ],
)

java_binary(
    name = "ApiServer",
    runtime_deps = [":server"],
)
