java_plugin(
    name = "autovalue-plugin",
    generates_api = 1,
    processor_class = "com.google.auto.value.processor.AutoValueProcessor",
    deps = ["@maven//:com_google_auto_value_auto_value"],
)

java_library(
    name = "autovalue-processor",
    exported_plugins = [":autovalue-plugin"],
    exports = ["@maven//:com_google_auto_value_auto_value"],
)

java_library(
    name = "server",
    srcs = glob(["*.java"]),
    resources = ["//ui/tts:static-files"],
    deps = [
        ":autovalue-processor",
        "//java/com/jermowery/audio/lib",
        "@maven//:com_google_api_api_common",
        "@maven//:com_google_api_gax",
        "@maven//:com_google_api_grpc_proto_google_cloud_texttospeech_v1",
        "@maven//:com_google_auto_value_auto_value_annotations",
        "@maven//:com_google_cloud_google_cloud_texttospeech",
        "@maven//:com_google_code_gson_gson",
        "@maven//:com_google_guava_guava",
        "@maven//:com_google_protobuf_protobuf_java",
        "@maven//:org_threeten_threetenbp",
    ],
)

java_binary(
    name = "ApiServer",
    runtime_deps = [":server"],
)
